# MolSim-WS25-GroupC

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  Doxyfile.in  README.md  cmake-format.yaml  flake.nix  test.txt
.github/workflows/: ci.yaml  gtests_workflows.yaml  publish-docker.yml
SoA/: forces.h  pairwise_soa.h  soa.h  vec_3d.hpp
cmake/modules/: clang-format.cmake  clang-tidy.cmake  doxygen.cmake  embed.cmake  third-party.cmake  vtk.cmake
cmake/toolchain/: muc.cmake
hooks/: pre-commit
include/: CompilerTraits.h  Concepts.h  Constants.h  Debug.h  Enums.h  FileReader.h  FixedString.h  ForceCalculators.h  IOProviders.h  MolSim.h  Particle.h  ParticleContainer.h  Presets.h  Thermostat.h  Vector.h  utils
include/grid/: enums.hpp
include/grid/bounds/: conditions.hpp  operations.hpp
include/grid/particle_container/: fwd.hpp  impl.hpp  particle_container.hpp  system.hpp
include/iterators/: border_cells.hpp  enumerate_cells.hpp  interactions.hpp  neighbors.hpp  pairwise.hpp  periodic.h  periodic.hpp
include/outputWriter/: TXTWriter.h  VTKWriter.h  XYZWriter.h  outputWriters.h
include/output_writers/: checkpoint.hpp  io.hpp  statistics_output.hpp  txt.hpp  vtk.hpp  xyz.hpp
include/physics/: forces.hpp  maxwell_boltzmann.hpp  particle.hpp  thermostat.hpp  vec_3d.hpp
include/simulation/: entities.hpp  molsim.hpp  particle.hpp  statistics.hpp  thermostat.hpp
include/simulation/config/: entities.hpp  json_schema.hpp  parse.hpp
include/utility/: compiler_traits.hpp  concepts.hpp  constants.hpp  debug.hpp  fixed_string.hpp  macros.hpp  openmp.hpp  presets.hpp  random_preprocessed.hpp
include/utility/tracing/: config.hpp  macros.hpp  special_memfun.hpp
include/utils/: ArrayUtils.h  MaxwellBoltzmannDistribution.h
input/: assignment2.txt  eingabe-sonne.txt
input/assignment3/debug/: moving_square.json  particle_moving_upwards.json  two_particles_moving_towards_each_other.json  z_boundary_check.json
input/assignment3/task2/: 1000_molecule_benchmark.json  2000_molecule_benchmark.json  4000_molecule_benchmark.json  8000_molecule_benchmark.json  collision_of_two_bodies.json
input/assignment3/task2/benchmark/direct_sum/: 1000.txt  2000.txt  4000.txt  8000.txt
input/assignment3/task2/benchmark/linked_cell/constant_domain/: 1000_105x105.json  2000_105x105.json  4000_105x105.json  8000_105x105.json
input/assignment3/task2/benchmark/linked_cell/constant_squaresize/: 1000_105x105.json  1000_54x54.json  1000_75x75.json
input/assignment3/task2/benchmark/linked_cell/fitted_domain/: 1000_39x39.json  2000_54x54.json  4000_75x75.json
input/assignment3/task4/: simulation_of_a_falling_drop.json
input/assignment4/debug/: collision_of_two_bodies.json  empty.json  gravity_test.json  two_particles_moving_towards_each_other.json
input/assignment4/task2/: big_experiment.json  small_experiment.json
input/assignment4/task5/: big_experiment.json
input/assignment5/debug/old_assignments/drop/actual_simulation/: bodies.json  config.json
input/assignment5/debug/old_assignments/drop/equilibration_run/: bodies.json  config.json
input/assignment5/debug/old_assignments/equilibration/: actual_simulation.json  equilibration.json
input/assignment5/debug/old_assignments/small_experiment/: bodies.json  config.json
input/assignment5/debug/simple/0_empty_body/: config.json
input/assignment5/debug/simple/1_one_particle/: bodies.json  config.json
input/assignment5/debug/simple/2_two_particles_moving_towards_each_other/: bodies.json  config.json
input/assignment5/debug/simple/3_collision_of_two_bodies/: bodies.json  config.json
input/assignment5/debug/simple/4_gravity/: bodies.json  config.json
input/assignment5/debug/task5/: config.json
input/assignment5/debug/task5/outflow/: bodies.json  config.json
input/assignment5/task1/: bodies.json  config.json
input/assignment5/task3/: bodies.json  config.json
input/assignment5/task4/large_experiment/: bodies.json  config.json
input/assignment5/task4/rayleigh_taylor_3d/: config.json
input/assignment5/task5/equilibration/: bodies.json  config.json
input/assignment5/task5/slow_cooling_argon/: config.json
input/assignment5/task5/super_cooling_argon/: config.json
src/: FileReader.cpp  FileReader.h  MolSim.cpp  Particle.cpp  Particle.h  main.cpp
src/outputWriter/: VTKWriter.cpp  XYZWriter.cpp  XYZWriter.h
test/: BorderCellIteratorTest.cpp  CMakeLists.txt  ConfigTest.cpp  DirectionalInteractionTest.cpp  ParticleContainerTest.cpp  SharedTools.h  SimTest.cpp  Test.cpp  TestMain.cpp  VectorTest.cpp  othercmake  test_main.cpp
test/grid/particle_container/: particle_container_test.cpp
test/gtest_constexpr/: gtest_constexpr.h
test/gtest_constexpr/internal/: constexpr_comparators.h  stamps.h
test/include/: testing_utilities.hpp
test/include/gtest_constexpr/: macros.hpp
test/include/gtest_constexpr/internal/: stamps.hpp
test/iterators/: border_cells_test.cpp  interactions_test.cpp  neighbors_test.cpp  pairwise_test.cpp
test/physics/: vec_3d_test.cpp
test/simulation/: simulation_test.cpp  thermostat_test.cpp
test/simulation/config/: config_test.cpp
utils/: lsan_ignorelist
utils/hooks/: pre-commit
utils/random/: check.cpp  definitions.h  generate.cpp
utils/scripts/: assignment3_benchmarks.sh  coverage.sh  generate_random_bin.sh
